<resources>
    <string name="app_name">Movie Recs</string>
    <string name="team_name">Condor and Friends</string>
    <string name="presents">presents</string>

    <string name="filter">Filter</string>
    <string name="date_added">Recently Added</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Release Date</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>

    <string name="attribution">Attribution</string>
    <string name="link_key">link_key</string>
    <string name="moviedb_by_name">The Movie DB</string>
    <string name="moviedb">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>

    <!--nav drawer-->
    <string name="home">Home</string>
    <string name="adv_search">Advanced Search</string>
    <string name="watchlist">Watched list</string>
    <string name="not_watchlist">Plan to Watch list</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <!--advanced search-->
    <string name="search">Search</string>
    <string name="genre">Genre:</string>
    <string name="genre_hint">Pick a genre</string>
    <string name="num_star">Rating:</string>
    <string name="num_star_hint">Enter # of stars</string>
    <string name="keywords">Keywords:</string>
    <string name="keyword_hint">Enter keywords</string>
    <string name="keyword_not_found">Keyword not found</string>
    <string name="person_not_found">Person not found</string>
    <string name="cast">Cast</string>
    <string name="cast_hint">Enter cast</string>
    <string name="release_date">Release Date:</string>
    <string name="release_date_hint">Enter release date</string>
    <string name="release_date_error">Must specify both release date and pick a relative time</string>
    <string-array name="release_date_options">
        <item>Pick</item>
        <item>Before (&lt;=)</item>
        <item>After (&gt;=)</item>
    </string-array>
    <string name="clear">Clear</string>
    <string name="no_results">No Results Found</string>
    <string name="adv_search_results">Search Results</string>
    <string name="revise_search">Revise search parameters</string>

    <string name="save">Save to Watchlist</string>
    <string name="add_to_watchlist">watchlist</string>
    <string name="movie_details_title">Movie Details</string>

    <!--watchlist-->
    <string name="alert_dialog_title">Remove from Watchlist?</string>
    <string name="alert_dialog_text">Are you sure you want to remove</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="watchlist_title">Watched List</string>
    <string name="not_watchlist_title">Plan to Watch List</string>
    <string name="watched_list">Watched List</string>
    <string name="not_watched_list">Plan to Watch List</string>
    <string name="sent_to">sent to</string>
    <string name="undo">UNDO</string>
    <string name="empty_list">You dont have anything here!</string>

    <!-- basic search -->
    <string name="search_label">Search</string>
    <string name="search_header">"Search: "</string>
    <string name="search_hint">Search for movies</string>

    <!--settings-->
    <string name="settings">Settings</string>
    <string name="style_option_title">Choose a Better Theme</string>
    <string name="style_title">Current Theme: </string>
    <string name="style_key">TheME_KeY</string>
    <string name="movie_search_error">"Could not find movies matching "</string>
    <string name="description_label">Description</string>
    <string name="recommendations_lable">Recommendations</string>
    <string name="release_lable">"Released: "</string>
    <string name="undo_label">Undo</string>
    <string name="cast_label">Cast</string>
    <string name="crew">Crew</string>
    <string name="not_available_short">N/A</string>
    <string name="not_avail_long">Not Available</string>
    <string name="clear_results">Clear search results</string>
    <string-array name="theme_options">
        <item>Default</item>
        <item>Cru Gold :D</item>
        <item>Flora and Fauna</item>
        <item>Brrrr its cold</item>
        <item>Blue Forest</item>
    </string-array>
    <string-array name="theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
